[package]
name = "doublets-web"
version = "0.1.0-beta.3"
authors = ["uselessgoddess"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
doublets = { git = "https://github.com/linksplatform/Data.Doublets", packages = "doublets" }
getrandom = { version = "0.2.3", features = ["js"] }

js-sys = "0.3.55"
wasm-bindgen = { version = "0.2.63", features = ["nightly"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3
